--- a/style.css
+++ b/style.css
@@ -15,3 +15,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 */
 
 @import url("../vienan/static/css/app.fbe893614704e0cc3eb695ace6a05cb9.css");
+
+.category .category-left a{
+    color: #fff;
+}
